test/Neg/termina/resource_class/in_port.fin
interface TMChannelInterface {
    procedure get_tm_sent_packets(&mut self, packets : &mut u32);
};

resource class TMChannel provides TMChannelInterface {
    
  tm_sent_packets : u32;

  input_msg : in u32 triggers get_tm_sent_packets;

  procedure get_tm_sent_packets(&mut self, packets : &mut u32) {
    *packets = self->tm_sent_packets;
    return;
  }

};